--- a/public_html/assets/css/johndoe.css
+++ b/public_html/assets/css/johndoe.css
@@ -574,6 +574,16 @@ pre code {
     max-width: 720px;
   }
 }
+/* In styles.css or component's CSS file */
+@media (max-width: 768px) {
+  body {
+    background-color: lightblue;
+  }
+
+  .my-div {
+    flex-direction: column;
+  }
+}
 
 @media (min-width: 992px) {
   .container {
